--- a/style.css
+++ b/style.css
@@ -13,9 +13,9 @@
 }
 
 [data-theme="dark"] {
-  --primary-color: rgb(150, 65, 255);
+  --primary-color:  #03dac5;
   --primary-variant: #6c63ff;
-  --secondary-color: #03dac5;
+  --secondary-color: rgb(245, 0, 87);
   --on-primary: #000;
   --on-background: rgba(255, 255, 255, 0.9);
   --on-background-alt: rgba(255, 255, 255, 0.7);
